--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,7 @@ body {
 
 .button {
   position: absolute;
-  bottom: 50px;
+  bottom: 5%;
   right: 50px;
   line-height: 1;
   background-color: white;
