--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,7 @@ body {
   display: grid;
   justify-content: center;
   align-content: center;
+  overflow: hidden;
   height: 100vh;
   width: 100%;
 }
